Just changed background and added my files.

--- a/index.html
+++ b/index.html
@@ -95,30 +95,30 @@
 			<section style="margin-bottom: 50px">
 				<h3 class="major">Literature Reviews</h3>
 				<ul>
-					<li><a href="files/adam_litreview.pdf">Adam</a></li>
-					<li><a href="#">James</a></li>
+					<li><a href="files/adam_litreview.pdf">Adam's</a></li>
+					<li><a href="files/james_lit.pdf">James's</a></li>
 				</ul>
 			</section>
 
 			<section style="margin-bottom: 50px">
 				<h3 class="major">Project Proposal</h3>
 				<ul>
-					<li><a href="files/proposal.pdf">Combined</a></li>
+					<li><a href="files/proposal.pdf">Team</a></li>
 				</ul>
 			</section>
 
 			<section style="margin-bottom: 50px">
 				<h3 class="major">Final Project</h3>
 				<ul>
-					<li><a href="files/adam_final.pdf">Adam</a></li>
-					<li><a href="#">James</a></li>
+					<li><a href="files/adam_final.pdf">Adam's</a></li>
+					<li><a href="files/james_final.pdf">James's</a></li>
 				</ul>
 			</section>
 
 			<section style="margin-bottom: 50px">
 				<h3 class="major">Poster</h3>
 				<ul>
-					<li><a href="files/poster.pdf">Combined</a></li>
+					<li><a href="files/poster.pdf">Team</a></li>
 				</ul>
 			</section>
 		</article>
@@ -439,7 +439,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
     <!-- Footer -->
     <footer id="footer">
-		<p class="copyright">&copy; <a href="#contact">Adam and James</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+		<p class="copyright">&copy; <a href="#contact">Adam and James</a>. Design: <a href="https://html5up.net">HTML5 UP</a>. Image: <a href="www.astrophemeris.es">www.astrophemeris.es</p>
     </footer>
 
 </div>
