--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
                 sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam.
                 Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum
                 primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+            <h3 class="major">Genetic Algorithm</h3>
+            <h3 class="major">Genetic Algorithm</h3>
         </article>
 
 		<!-- About -->
@@ -130,30 +132,20 @@
 			<section style="margin-bottom: 50px">
 				<h3 class="major">Adam Lewison</h3>
 				<ul class="icons">
-					<li><a class="icon fa-envelope" href="#"><span class="label">Facebook</span></a></li>
-					<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-					<li><a class="icon brands fa-github" href="#"><span class="label">Github</span></a></li>
+					<li><a class="icon fa-envelope" href="mailto:LWSADA002@myuct.ac.za"> <span class="label">Email</span></a></li> <a href=mailto:LWSADA002@myuct.ac.za>LWSADA002@myuct.ac.za</a>
 				</ul>
-				<h4>
-					Computer Science Honours
-				</h4>
-				<h5>
-					University Of Cape Town
-				</h5>
 			</section>
 			<section>
 				<h3 class="major">James Taljard</h3>
 				<ul class="icons">
-					<li><a class="icon fa-envelope" href="#"><span class="label">Facebook</span></a></li>
-					<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
-					<li><a class="icon brands fa-github" href="#"><span class="label">Github</span></a></li>
+					<li><a class="icon fa-envelope" href="mailto:TLJJAM001@myuct.ac.za"><span class="label">Email</span></a></li> <a href=mailto:LWSADA002@myuct.ac.za>TLJJAM001@myuct.ac.za</a>
 				</ul>
 				<h4>
-					Computer Science Honours
+					Department of Computer Science
 				</h4>
-				<h5>
+				<h4>
 					University Of Cape Town
-				</h5>
+				</h4>
 			</section>
 			<!--
             <form action="#" method="post">
@@ -439,7 +431,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
     <!-- Footer -->
     <footer id="footer">
-		<p class="copyright">&copy; <a href="#contact">Adam and James</a>. Design: <a href="https://html5up.net">HTML5 UP</a>. Image: <a href="www.astrophemeris.es">www.astrophemeris.es</p>
+		<p class="copyright">&copy; <a href="#contact">Adam and James</a>. Design: <a href="https://html5up.net">HTML5 UP</a>. Image: <a href="https://www.astrophemeris.es">www.astrophemeris.es</a> </p>
     </footer>
 
 </div>
