--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<section>
 				<h3 class="major">James Taljard</h3>
 				<ul class="icons">
-					<li><a class="icon fa-envelope" href="mailto:TLJJAM001@myuct.ac.za"><span class="label">Email</span></a></li> <a href=mailto:LWSADA002@myuct.ac.za>TLJJAM001@myuct.ac.za</a>
+					<li><a class="icon fa-envelope" href="mailto:TLJJAM001@myuct.ac.za"><span class="label">Email</span></a></li> <a href=mailto:TLJJAM001@myuct.ac.za>TLJJAM001@myuct.ac.za</a>
 				</ul>
 				<h4>
 					Department of Computer Science
