--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
     <!-- Footer -->
     <footer id="footer">
-		<p class="copyright">&copy; <a href="#contact">Adam and James</a>. Design: <a href="https://html5up.net">HTML5 UP</a>. Image: <a href="https://www.astrophemeris.es">www.astrophemeris.es</a> </p>
+		<p class="copyright">&copy; Contact: <a href="#contact">Adam and James</a>. Design: <a href="https://html5up.net">HTML5 UP</a>. Image: <a href="https://www.astrophemeris.es">www.astrophemeris.es</a> </p>
     </footer>
 
 </div>
