--- a/index.html
+++ b/index.html
@@ -137,13 +137,31 @@
         <!-- About -->
         <article id="results">
             <h2 class="major">Results</h2>
-            <span class="image main"><img alt="" src="images/pic03.jpg"/></span>
+
             <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend
                 sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam.
                 Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum
                 primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
             <h3 class="major">Genetic Algorithm</h3>
-            <h3 class="major">Genetic Algorithm</h3>
+            <h3 class="major">Differential Evolution</h3>
+            <p>
+                In line with Objective one concerning Differential Evolution - we found that a population size of 20 performed very well.
+                By opting to choose a lower a population size we were able to still have many generations within our budget.
+            </p>
+
+            <span class="image main">
+                <img alt="" src="images/pop_size_nyse.png"/>
+                This image clearly depicts the drop in mean squared error with a validation size of 20.
+            </span>
+
+            <p>
+                However, as shown in the picture below, no obvious improvement could be found by tweaking the F and CR control-parameters.
+            </p>
+
+            <span class="image main">
+                <img alt="" src="images/heat_alldata_20.png"/>
+                This image clearly depicts the drop in mean squared error with a validation size of 20.
+            </span>
         </article>
 
 		<!-- About -->
