--- a/index.html
+++ b/index.html
@@ -124,14 +124,9 @@
         <!-- Work -->
         <article id="goals">
             <h2 class="major">Goals</h2>
-            <span class="image main"><img alt="" src="images/pic02.jpg"/></span>
-            <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
-                Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin
-                mauris nec lorem luctus ultrices.</p>
-            <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed
-                nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet
-                massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus
-                et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+            <span class="image main"><img alt="" src="images/goal.jpg"/></span>
+            <p> The focus of this research was framed in a single research objective which we set out to acheive. Our objective was to analyse and compare the performance of evolutionary algorithms for hyperparameters optimisation in neural network models given the context of trend prediction in time series data.</p>
+            <p>Thus, we set out our research to answer two research questions formulated from the above objective. Firstly, can evolutionary algorithms be used to effectively solve the hyperparameter optimisation problem when compared to a conventional method - random search in this case - in terms of minimising the validation mean squared error of the model? Secondly, how well do the models produced by the evolutionary algorithm AutoML method perform in the task of trend prediction, using the model's test mean square error as the evaluation metric. </p>
         </article>
 
         <!-- About -->
