--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
             <h2 class="major">Goals</h2>
             <span class="image main"><img alt="" src="images/goal.jpg"/></span>
             <p> The focus of this research was framed in a single research objective which we set out to acheive. Our objective was to analyse and compare the performance of evolutionary algorithms for hyperparameters optimisation in neural network models given the context of trend prediction in time series data.</p>
-            <p>Thus, we set out our research to answer two research questions formulated from the above objective. Firstly, can evolutionary algorithms be used to effectively solve the hyperparameter optimisation problem when compared to a conventional method - random search in this case - in terms of minimising the validation mean squared error of the model? Secondly, how well do the models produced by the evolutionary algorithm AutoML method perform in the task of trend prediction, using the model's test mean square error as the evaluation metric. </p>
+            <p>Thus, we set out our research to answer two research questions formulated from the above objective. Firstly, can evolutionary algorithms be used to effectively solve the hyperparameter optimisation problem when compared to a conventional method - random search in this case - in terms of minimising the validation mean squared error of the model? Secondly, how well do the models produced by the evolutionary algorithm AutoML method perform in the task of trend prediction, using the model's test mean square error as the evaluation metric? </p>
             <h3> Genetic Algorithm Objectives </h3>
-            <p> The experiments regarding genetic algorithms evaluated further with the goal of understanding how well the two algorithms (genetic algorithm and random search) perform under both high and low computational budgets. </p>
+            <p> The experiments regarding genetic algorithms were evaluated further with the objective of understanding how well the two algorithms (genetic algorithm and random search) perform under both high and low computational budgets. </p>
             <h3> Differential Evolution Objectives </h3>
-            <p></p>
+            <p> The experiments regarding differential evolution were too evaluated further with two different objectives. The first objective being to study the effect of change in control-parameters and the Differential Evolution algorithm in order to optimize its performance. The second objective was to compare the performance of differential evolution to an unintelligent random search and to another state of the art evolutionary algorithm.</p>
         </article>
 
         <!-- About -->
