Some simple changes to my sections.

--- a/index.html
+++ b/index.html
@@ -136,12 +136,17 @@
         <!-- About -->
         <article id="results">
             <h2 class="major">Results</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend
-                sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam.
-                Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum
-                primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+            <p> In order to acheive the objectives outlined at the beginning of our research, we performed a number of different experiments. We implemented the experiments using Python along with PyTorch for the neural networks and PyMoo for the evolutionary algorithm. We evaluated the evolutionary algorithms against a hand-made random search method. Below are the details and the results pertaining to each evolutionary algorithm under evaluation. </p>
             <h3 class="major">Genetic Algorithm</h3>
+            <span class="image main">
+                <img alt="" src="images/nasd.png"/>
+                This image ...
+            </span>
+            <p>  </p>
+            <span class="image main">
+                <img alt="" src="images/ny.png"/>
+                This image ...
+            </span>
             <h3 class="major">Differential Evolution</h3>
             <p>
                 In line with Objective one concerning Differential Evolution - we found that a population size of 20 performed very well.
