--- a/index.html
+++ b/index.html
@@ -149,13 +149,23 @@
             <p> In order to acheive the objectives outlined at the beginning of our research, we performed a number of different experiments. We implemented the experiments using Python along with PyTorch for the neural networks and PyMoo for the evolutionary algorithm. We evaluated the evolutionary algorithms against a hand-made random search method. Below are the details and the results pertaining to each evolutionary algorithm under evaluation. </p>
 
             <h3 class="major">Genetic Algorithm</h3>
+            <p> </p>
             <span class="image main">
                 <img alt="" src="images/nasd.png"/>
+                This image ...
+            </span>
+            <span class="image main">
+                <img alt="" src="images/l_nas.png"/>
                 This image ...
             </span>
             <p>  </p>
             <span class="image main">
                 <img alt="" src="images/ny.png"/>
+                This image ...
+            </span>
+            
+            <span class="image main">
+                <img alt="" src="images/low_ny.png"/>
                 This image ...
             </span>
             <h3 class="major">Differential Evolution</h3>
