--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 			</section>
 
 			<section style="margin-bottom: 50px">
-				<h3 class="major">Final Project</h3>
+				<h3 class="major">Final Projects</h3>
 				<ul>
 					<li><a href="files/adam_final.pdf">Adam's</a></li>
 					<li><a href="files/james_final.pdf">James's</a></li>
